[gd_scene load_steps=11 format=3 uid="uid://b8dk4sqad3rac"]

[ext_resource type="Texture2D" uid="uid://chn3d1tof2vpu" path="res://2-5 tahun/asset 2-5 tahun/bg 1.png" id="1_qurfs"]
[ext_resource type="Script" path="res://2-5 tahun/anak2-5.4.gd" id="1_rye13"]
[ext_resource type="Texture2D" uid="uid://bxomu7sy6onij" path="res://2-5 tahun/asset 2-5 tahun/meja.png" id="2_sh8r8"]
[ext_resource type="Texture2D" uid="uid://btknx1hw0ew5o" path="res://2-5 tahun/asset 2-5 tahun/jam 2.png" id="3_qtcuj"]
[ext_resource type="Texture2D" uid="uid://dqojrjkpgevup" path="res://2-5 tahun/asset 2-5 tahun/ikan.png" id="4_jc4lm"]
[ext_resource type="Texture2D" uid="uid://bij37q3tvnwgk" path="res://2-5 tahun/asset 2-5 tahun/nasi 2.png" id="5_u4nhf"]
[ext_resource type="Texture2D" uid="uid://c8awkr2n71gg8" path="res://2-5 tahun/asset 2-5 tahun/air.png" id="6_xyevv"]
[ext_resource type="Texture2D" uid="uid://p656tohxpxr7" path="res://2-5 tahun/asset 2-5 tahun/button.png" id="7_cc3vu"]
[ext_resource type="Texture2D" uid="uid://d3p6sf0x5gb71" path="res://2-5 tahun/asset 2-5 tahun/soup.png" id="7_lrsvw"]
[ext_resource type="Script" path="res://2-5 tahun/TouchScreenButton5.gd" id="9_tsich"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rye13")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(269.25, 479)
scale = Vector2(1.36768, 1.12207)
texture = ExtResource("1_qurfs")

[node name="meja" type="Sprite2D" parent="."]
position = Vector2(269, 443)
scale = Vector2(1.06743, 1.03805)
texture = ExtResource("2_sh8r8")

[node name="jam" type="Sprite2D" parent="."]
position = Vector2(267, 788)
texture = ExtResource("3_qtcuj")

[node name="TouchScreenButton5" type="TouchScreenButton" parent="."]
script = ExtResource("9_tsich")

[node name="Button 5" type="Button" parent="TouchScreenButton5"]
offset_left = 421.0
offset_top = 794.0
offset_right = 498.0
offset_bottom = 874.0
icon = ExtResource("7_cc3vu")
flat = true

[node name="TouchScreenSoup" type="TouchScreenButton" parent="."]
position = Vector2(336, 545)
script = ExtResource("9_tsich")

[node name="soup" type="Button" parent="TouchScreenSoup"]
offset_left = -62.0
offset_top = -78.0
offset_right = 78.0
offset_bottom = 94.0
icon = ExtResource("7_lrsvw")
flat = true
expand_icon = true

[node name="TouchScreenAir" type="TouchScreenButton" parent="."]
position = Vector2(360, 304)
script = ExtResource("9_tsich")

[node name="air" type="Button" parent="TouchScreenAir"]
offset_left = -66.0
offset_top = -83.0
offset_right = 65.0
offset_bottom = 86.0
icon = ExtResource("6_xyevv")
flat = true
expand_icon = true

[node name="TouchScreenNasi" type="TouchScreenButton" parent="."]
position = Vector2(240, 410)
script = ExtResource("9_tsich")

[node name="nasi" type="Button" parent="TouchScreenNasi"]
offset_left = -88.0
offset_top = -77.0
offset_right = 86.0
offset_bottom = 81.0
icon = ExtResource("5_u4nhf")
flat = true
expand_icon = true

[node name="TouchScreenIkan" type="TouchScreenButton" parent="."]
position = Vector2(213, 666)
rotation = 1.8326
script = ExtResource("9_tsich")

[node name="ikan" type="Button" parent="TouchScreenIkan"]
offset_left = -95.3814
offset_top = 69.039
offset_right = 54.6186
offset_bottom = 266.039
rotation = -1.5708
icon = ExtResource("4_jc4lm")
flat = true
expand_icon = true

[connection signal="pressed" from="TouchScreenButton5/Button 5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="TouchScreenSoup/soup" to="." method="_on_soup_pressed"]
[connection signal="pressed" from="TouchScreenAir/air" to="." method="_on_air_pressed"]
[connection signal="pressed" from="TouchScreenNasi/nasi" to="." method="_on_nasi_pressed"]
[connection signal="pressed" from="TouchScreenIkan/ikan" to="." method="_on_ikan_pressed"]
