extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_button_5_pressed():
	get_tree().change_scene_to_file("res://2-5 tahun/anak2-5.5.tscn")


func _on_soup_pressed():
	pass # Replace with function body.


func _on_air_pressed():
	pass # Replace with function body.


func _on_nasi_pressed():
	pass # Replace with function body.


func _on_ikan_pressed():
	pass # Replace with function body.
